--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
 <!DOCTYPE html>
-
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -8,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donut Searcher!</title>
-    <script defer type="text/javscript" src="./index.js"></script>
+    <script defer src="./index.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -41,7 +39,7 @@
     <div class="container"></div>
     <h2>Please leave a comment!</h2>
     <form>
-        <textarea placeholer='I love donuts, do you?'></textarea>
+        <textarea>'I love donuts, do you?'></textarea>
         <div class="btn">
             <input type="submit" value='comment'>
         </div>
