Fixed stars and Images

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
     <!--Need to create elements with forEach and place donut shops here-->
     <div id=donut-info>
         <!--once one of the random donut images is selected show Name/star rating/ comments and location-->
-        <img id="placeholdernut" src="7-76082_svg-royalty-free-stock-donuts-png-clipart-picture.png" alt=Donutgraphic>
+        <img id="placeholdernut" src="./Sources/7-76082_svg-royalty-free-stock-donuts-png-clipart-picture.png" alt=Donutgraphic>
         <h3 class="shopname">Donut shop go here</h3>
-        <div id=star-rating>
+        <div id=star-rating >
+            <!-- <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star"></span>
-            <span class="fa fa-star"></span>
-            <span class="fa fa-star"></span>
-            <span class="fa fa-star"></span>
+            <span class="fa fa-star"></span> -->
         </div>
         <h4 class="location">location down here</h4>
     </div>
